# sensor-dashboard

./: .env.example  .gitignore  README.md  docker-compose.yml  dump.sql
scripts/: db_util.sh
services/backend/: Dockerfile  demo_ingest.py  pyproject.toml
services/backend/app/: db.py  deps.py  main.py  models.py  schemas.py  seed.py  simulator.py
services/backend/tests/: test_api.py
services/frontend/: Dockerfile  create-admin.ts  create-users.ts  entrypoint.sh  next.config.ts  package-lock.json  package.json  setup-roles.ts
services/frontend/src/: middleware.ts
services/frontend/src/app/: globals.css  layout.tsx
services/frontend/src/app/api/ingest/: route.ts
services/frontend/src/app/api/proxy/categories/: route.ts
services/frontend/src/app/api/proxy/sensors/: route.ts
services/frontend/src/app/api/proxy/sensors/[id]/: route.ts
services/frontend/src/app/api/proxy/stats/: route.ts
services/frontend/src/app/api/proxy/users/: route.ts
services/frontend/src/app/dashboard/: layout.tsx  page.tsx
services/frontend/src/app/dashboard/sensors/: page.tsx
services/frontend/src/app/dashboard/sensors/[id]/: page.tsx
services/frontend/src/app/dashboard/users/: page.tsx
services/frontend/src/app/login/: page.tsx
services/frontend/src/lib/: auth-client.ts  auth.ts
