[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.2",
    "psycopg[binary]>=3.3.3",
    "pydantic-settings>=2.13.1",
    "requests>=2.33.1",
    "sqlmodel>=0.0.37",
    "uvicorn[standard]>=0.42.0",
]
